# nutrition-tracker

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: blank.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3dde234d16e2_create_tables.py  4215c8177e26_create_food_entries.py  90c7c4b286b9_add_created_at.py  bdd3943f43d8_add_users_and_relations.py
backend/app/: application.py  main.py
backend/app/api/: application.py  auth.py  food.py
backend/app/auth/: jwt.py  security.py
backend/app/db/: database.py  dependencies.py  food.py  init_db.py  user.py
backend/app/schemas/: food.py  user.py
backend/app/services/: llm.py
backend/tests/: test_api.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Login.jsx  Profile.jsx  main.jsx
frontend/src/assets/: mascot.lottie
